Finished Coffee shop

--- a/coffee/index.html
+++ b/coffee/index.html
@@ -2,8 +2,16 @@
 <html>
 <head>
 <title>Dream Beans Caffee</title>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
+	<div class="background">
+	<!--<img src="Medium_roasted_Arabica_coffee_beans.jpg">-->
+	<h1><em id="dream">dream</em>
+	</br>BEANS </br>CAFFE</h1>
+</div>
+	<div class="topRect">
 <nav>
 	<ul>
 		<li>about</li>
@@ -12,8 +20,9 @@
 		<li>contact</li>
 	</ul>
 	</nav>
+	</div>
 
-	<section>
+	<section id="leftColumn">
 		<h2>Organic. Crema. Barista </h2>
 		<p>est spoon half and half extra flavour saucer. Plunger pot cafÃ© au lait froth ut fair trade whipped, doppio, milk at half and half white percolator. French press iced carajillo, coffee caramelization caffeine half and half irish id kopi-luwak latte cappuccino. Extra id, sweet breve robust extra seasonal.</p>
 
@@ -21,7 +30,7 @@
 A robust, extra shop, espresso eu, cultivar ut barista whipped extra. Et galÃ£o, robusta mocha froth dark percolator. Flavour aftertaste, cup froth, chicory sugar barista roast robust caramelization. Macchiato single shot steamed, ristretto acerbic coffee aroma mocha at dripper.</p>
 </section>
 
-<section>
+<section id="rightColumn">
 	<h2>Coffee. Bar. French Press </h2>
 	<p>
 Caffeine percolator cafÃ© au lait body robust espresso variety kopi-luwak. Extraction cortado aged organic macchiato seasonal cortado trifecta. Mug brewed sugar turkish americano lungo extraction. Ristretto, robusta dripper, half and half cup dark single shot seasonal.</p>
@@ -30,8 +39,8 @@ Caffeine percolator cafÃ© au lait body robust espresso variety kopi-luwak. Ext
 </section>
 
 <div>
-<footer>123 Latte Lane, Javaville - 555-423-1234
-Â©Dream Beans Caffe 2013</footer></div>
+<footer><p>123 Latte Lane, Javaville - 555-423-1234</p>
+<p>Â©Dream Beans Caffe 2013</p></footer></div>
 
 </body>
 </html>
