--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Michael Facchinell</title>
+<title>Michael Facchinello</title>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<img src="https://plus.google.com/u/0/photos/100322518838157983052/albums/5639237234114393409/5639242320275955762?pid=5639242320275955762&oid=100322518838157983052" />
-	<p>I draw my inspiration from three places: my principals, my passions, and an insatiable curiosity. I principally believe in leading an interesting life, creating meaningful relationships, making a difference, and never wasting a moment in the precious space of life. I am passionate about creating the world around me, beautiful things, experiencing life, and following my principals. Finally, I am not satisfied with not knowing about the world around me. I read a lot, I tinker more, and I question constantly.</p>
-</body>
+	<header class="header">
+		<div class="container group">
+			 <img src="pictures/MFloGOWhite.png" class="image" id="logo">
+          <button class="btn Button">Blog</button>
+<div class="wrap">
+	<div class="content-wrap">
+		<section id="billboard"> </section>
+		<section id="about"> </section>
+		<section id="projects"></section>
+		<section id="learning"></section>
+
+				
+
+
+
+
+
+
+	<div class="static-container">
+		<section id ="title">
+			<div class="container group">
+				<ul>
+					<li><h1 class="heading" id="title">Michael </h1></li>
+					<li><h1 class="heading" id="title">Facchinello</li>
+				</ul>	
+		</section>	
+
+	</div>
+                                                                                                                                                                                                                                                  
+
+	</body>
 </html>
