--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="content-wrap">
 		<header class="header">
 		<div class="container-group">
-			 <img src="MFloGOWhite.png" class="image" id="logo">
+			 <img src="./MFloGOWhite.png" class="image" id="logo">
           <button class="btn Button" onclick >Blog</button>
           <a href="mailto:micfacch@gmail.com?Subject=Hey Michael!" target="blank">
 			<img src="mail.png" class="image" id="email">
@@ -29,21 +29,21 @@
 				<div class="container">
 					<div class="michaelSocial">
 					<div>
-				<img src="headshot.png" class="image" id="michael" width="300px">
+				<img src="./headshot.png" class="image" id="michael" width="300px">
 				</div>
 				
 				<div class="social">
 					<a href="http://twitter.com/mfacchinello">
-						<img alt="Twitter" src="TwitterBird.png" class="image" id="icon">
+						<img alt="Twitter" src="./TwitterBird.png" class="image" id="icon">
 					</a>
 					<a href="http://linkedin.com/in/facchinello/">
-						<img alt="LinkedIn" src="linkedinIcon.png" class="image" id="icon">
+						<img alt="LinkedIn" src="./linkedinIcon.png" class="image" id="icon">
 					</a>
 					<a href="http://www.quora.com/Michael-Facchinello/">
-						<img alt="Quora" src="QuoraQ.png" class="image" id="icon">
+						<img alt="Quora" src="./QuoraQ.png" class="image" id="icon">
 					</a>
 					<a href="https://plus.google.com/+MichaelFacchinello/photos">
-						<img alt="GooglePlus" src="googlePlus.png" class="image" id="icon">
+						<img alt="GooglePlus" src="./googlePlus.png" class="image" id="icon">
 					</a>
 				</div><!--social-->
 					</div>
@@ -64,16 +64,16 @@ I believe products should be useful, simple, and beautiful.</p>
 		<section id="projects">
 			<div class="container">
 				<a href="michaelfacchinello.com">
-						<img alt="MeetingSpace" src="SpaceManIcon.png" class="image" id="icons" width="22%">
+						<img alt="MeetingSpace" src="./SpaceManIcon.png" class="image" id="icons" width="22%">
 					</a>
 					<a href="michaelfacchinello.com">
-						<img alt="ChIdea" src="ChideaIcon.fw.png" class="image" id="icons" width="22%">
+						<img alt="ChIdea" src="./ChideaIcon.fw.png" class="image" id="icons" width="22%">
 					</a>
 					<a href="michaelfacchinello.com">
-						<img alt="GeneConnect" src="GeneConnectIcon.png" class="image" id="icons" width="22%">
+						<img alt="GeneConnect" src="./GeneConnectIcon.png" class="image" id="icons" width="22%">
 					</a>
 					<a href="michaelfacchinello.com">
-						<img alt="Concieo" src="concieo.png" class="image" id="icons" width="22%">
+						<img alt="Concieo" src="./concieo.png" class="image" id="icons" width="22%">
 					</a>
 			</div><!--container-->
 		</section><!--projects-->
