--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<div class="content-wrap">
 		<header class="header">
 		<div class="container-group">
-			 <img src="./MFloGOWhite.png" class="image" id="logo">
+			 <img src="./MFLoGOWhite.png" class="image" id="logo">
           <button class="btn Button" onclick >Blog</button>
           <a href="mailto:micfacch@gmail.com?Subject=Hey Michael!" target="blank">
-			<img src="mail.png" class="image" id="email">
+			<img src="Mail.png" class="image" id="email">
 					</a>
 
       </header>
@@ -29,7 +29,7 @@
 				<div class="container">
 					<div class="michaelSocial">
 					<div>
-				<img src="./headshot.png" class="image" id="michael" width="300px">
+				<img src="./Headshot.png" class="image" id="michael" width="300px">
 				</div>
 				
 				<div class="social">
@@ -73,7 +73,7 @@ I believe products should be useful, simple, and beautiful.</p>
 						<img alt="GeneConnect" src="./GeneConnectIcon.png" class="image" id="icons" width="22%">
 					</a>
 					<a href="michaelfacchinello.com">
-						<img alt="Concieo" src="./concieo.png" class="image" id="icons" width="22%">
+						<img alt="Concieo" src="./Concieo.png" class="image" id="icons" width="22%">
 					</a>
 			</div><!--container-->
 		</section><!--projects-->
