headShot.png fix

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<div class="container">
 					<div class="michaelSocial">
 					<div>
-				<img src="./Headshot.png" class="image" id="michael" width="300px">
+				<img src="./headShot.png" class="image" id="michael" width="300px">
 				</div>
 				
 				<div class="social">
