--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Michael Facchinello</title>
-<link rel="icon" type="image/png" href="./faviconimage.png"/>
+<link rel="icon" type="image/png" src="./faviconimage.png"/>
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600' rel='stylesheet' type='text/css'>
 </head>
