--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Michael Facchinello</title>
 <link rel="shortcut icon" href="./faviconimage.png">
-<link rel="icon" type="image/png" src="./faviconimage.png"/>
+<link rel="icon" type="image/png" src="./faviconlogo.png"/>
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600' rel='stylesheet' type='text/css'>
 </head>
