--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<img src="./HeadShot.png" class="image" id="michael" width="300px">
 				</div>
 				
-				<div class="social">
+				<div class="social clearfix">
 					<a href="http://twitter.com/mfacchinello">
 						<img alt="Twitter" src="./TwitterBird.png" class="image" id="icon">
 					</a>
