--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <div class="row">
  
           <div class="large-12 show-for-small columns">
-          <h3>Header</h3><hr>
+          <h2>Experience</h2>
         </div>
  
           <div class="large-3 small-6 columns">
